#16 build and publish docker images